Styling for display element

--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,9 @@
     <div id="drum-machine">
       <div class="controls">
         <h1 class="controls__label">Super Duper Drum Machine</h1>
-        <div id="display">Display</div>
+        <div id="display" class="controls__display">Display</div>
       </div>
-      <div class="button-grid">
+      <div class="btn-grid">
         <div class="drum-pad">Q
           <audio id="Q" class="clip" src="./assets/audio/crash.mp3">Audio element not supported in your browser.</audio>
         </div>
