--- a/app/index.html
+++ b/app/index.html
@@ -10,29 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
-
-    </header>
-    <div id="drum-machine">
-      <div class="controls">
-        <h1 class="controls__label">Super Duper Drum Machine</h1>
-        <div id="display" class="controls__display">Display</div>
-      </div>
-      <div class="btn-grid">
-        <div class="drum-pad">Q
-          <audio id="Q" class="clip" src="./assets/audio/crash.mp3">Audio element not supported in your browser.</audio>
-        </div>
-        <div class="drum-pad">W</div>
-        <div class="drum-pad">E</div>
-        <div class="drum-pad">A</div>
-        <div class="drum-pad">S</div>
-        <div class="drum-pad">D</div>
-        <div class="drum-pad">Z</div>
-        <div class="drum-pad">X</div>
-        <div class="drum-pad">C</div>
-      </div>
-
-    </div>
+    <div id="drum-machine"></div>
 
   </body>
 
