Add id attrib to drum pads. Add volume input element.

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="drum-machine"></div>
 
+  <!-- <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script> -->
   </body>
 
 </html>
